--- a/index_work.html
+++ b/index_work.html
@@ -19,6 +19,11 @@
                 <li class="header__list"><a class="header__link" href="index_work.html">Works</a></li>
                 <li class="header__list"><a class="header__link" href="#">Contact</a></li>
             </ul>
+            <div id="burger"class="header__burger">
+                <div class="header__border"></div>
+                <div class="header__border"></div>
+                <div class="header__border"></div>
+            </div>
         </nav>
     </header>
     <section class="Work">
