Ссылка detail добавленна

--- a/index_work.html
+++ b/index_work.html
@@ -34,7 +34,7 @@
                     <div class="work__card">
                         <img class="work__img" src="img/diog.jpg" alt="diog.jpg">
                         <div class="work__wrapper">
-                            <div class="work__title-two">Designing Dashboards</div>
+                            <div class="work__title-two"><a class="work__link" href="index_detail.html">Designing Dashboards</a></div>  
                             <div class="work__years-type">
                                 <span class="work__years">
                                     2020
@@ -52,7 +52,7 @@
                     <div class="work__card">
                         <img class="work__img" src="img/acid_babe.jpg" alt="acid_babe.jpg">
                         <div class="work__wrapper">
-                            <div class="work__title-two">Vibrant Portraits of 2020</div>
+                            <div class="work__title-two"><a class="work__link" href="index_detail.html">Vibrant Portraits of 2020</a></div>
                             <div class="work__years-type">
                                 <span class="work__years">
                                     2018
@@ -70,7 +70,7 @@
                     <div class="work__card">
                         <img class="work__img" src="img/malayalamA.jpg" alt="acid_babe.jpg">
                         <div class="work__wrapper">
-                            <div class="work__title-two">36 Days of Malayalam type</div>
+                            <div class="work__title-two"><a class="work__link" href="index_detail.html">36 Days of Malayalam type</a></div>
                             <div class="work__years-type">
                                 <span class="work__years">
                                     2018
@@ -88,7 +88,7 @@
                     <div class="work__card">
                         <img class="work__img" src="img/components.jpg" alt="acid_babe.jpg">
                         <div class="work__wrapper">
-                            <div class="work__title-two">Components</div>
+                            <div class="work__title-two"><a class="work__link" href="index_detail.html">Componentsc</a></div>
                             <div class="work__years-type">
                                 <span class="work__years">
                                     2018
