--- a/index_detail.html
+++ b/index_detail.html
@@ -19,18 +19,25 @@
                 <li class="header__list"><a class="header__link" href="index_work.html">Works</a></li>
                 <li class="header__list"><a class="header__link" href="#">Contact</a></li>
             </ul>
+            <div id="burger"class="header__burger">
+                <div class="header__border"></div>
+                <div class="header__border"></div>
+                <div class="header__border"></div>
+            </div>
         </nav>
     </header>
     <section class="detail">
         <div class="container">
             <h1 class="detail__h1">Designing Dashboards with usability in mind</h1>
             <div class="deatil__years-type">
-                <span class="deatil__years">
+                <div class="detail_flex">
+                    <span class="deatil__years">
                     2018
-                </span>
-                <span class="deatil__type">
+                    </span>
+                    <span class="deatil__type">
                     Dashboard, User Experience Design
-                </span>
+                    </span>
+                </div>
                 <p class="deatil__text">
                     Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. 
                     Exercitation veniam consequat sunt nostrud amet.
